--- a/src/main/webapp/private/administrativo/ppa/list.xhtml
+++ b/src/main/webapp/private/administrativo/ppa/list.xhtml
@@ -43,13 +43,17 @@
 											<h:outputText value="ANO INICIAL:"  styleClass="labelOutText" />
 										</div>
 										<div class="span3">
-											<h:inputText value="#{ppaListMBean.anoInicio}" styleClass="form-control input-sm" />
+											<h:inputText value="#{ppaListMBean.anoInicio}" styleClass="form-control input-sm" >
+											  <f:convertNumber />
+											</h:inputText>
 										</div>
 										<div class="span3">
 											<h:outputText value="ANO FINAL:" styleClass="labelOutText"  />
 										</div>
 										<div class="span3">
-											<h:inputText value="#{ppaListMBean.anoFim}" styleClass="form-control input-sm" />
+											<h:inputText value="#{ppaListMBean.anoFim}" styleClass="form-control input-sm" >
+											 <f:convertNumber />
+											</h:inputText>
 										</div>
 
 									</div>
@@ -89,11 +93,8 @@
 						<p:column headerText="Operação" style="width: 12%;"
 							footerText="Quantidade Total: #{ppaListMBean.listPpas.size()}">
 							<center>
-								<p:button title="Editar" outcome="ppaEdit" icon="ui-icon-pencil">
-									<f:param name="ppaId" value="#{ppa.id}" />
-								</p:button>
 
-								<p:commandButton title="Deletar"
+								<p:commandButton title="Deletar" update="tablePpa"
 									action="#{ppaListMBean.delete(ppa)}" icon="ui-icon-trash">
 									<p:confirm header="Confirmação"
 										message="Você tem certeza que deseja deletar?"
