Resolvir problemas de navegacao e fiz o menu de navegacao

--- a/src/main/webapp/private/administrativo/exercicio/form.xhtml
+++ b/src/main/webapp/private/administrativo/exercicio/form.xhtml
@@ -89,8 +89,8 @@
 							<h:commandButton value="Editar" action="#{exercicioMBean.mostraDados()}"
 								styleClass="btnAction btn btn-primary" rendered="false"/>							
 							&nbsp;	
-							<h:commandButton styleClass="btnAction btn btn-primary"
-								style="margin-left: 0px" value="Cancela" action="exercicioList" immediate="true" />							
+							<h:button styleClass="btnAction btn btn-primary"
+								style="margin-left: 0px" value="Cancela" outcome="exercicioList" immediate="true" />							
 						</div>										
 					</div>
 				</div>			
