--- a/src/main/webapp/private/administrativo/exercicio/list.xhtml
+++ b/src/main/webapp/private/administrativo/exercicio/list.xhtml
@@ -73,7 +73,7 @@
 											render="tableExerc" />
 									</h:commandButton>
 									&nbsp;
-									<h:commandButton value="Adicionar" styleClass=" btnAction btn btn-primary" action="exercicioForm"/>
+									    <h:button value="Adicionar" styleClass=" btnAction btn btn-primary" outcome="exercicioForm"/>
 									</div>
 								</div>
 							</fieldset>
