--- a/src/main/webapp/private/administrativo/link/form.xhtml
+++ b/src/main/webapp/private/administrativo/link/form.xhtml
@@ -73,7 +73,7 @@
 								 
 								&nbsp;
 									
-								<h:commandButton styleClass="btnAction btn btn-primary" style="margin-left: 0px" value="Cancelar" action="linksArquivosList" immediate="true" />												
+								<h:button styleClass="btnAction btn btn-primary" style="margin-left: 0px" value="Cancelar" outcome="linksArquivosList" immediate="true" />												
 							</div>			
 						</div>		
 					</div>
