--- a/src/main/webapp/private/administrativo/link/list.xhtml
+++ b/src/main/webapp/private/administrativo/link/list.xhtml
@@ -53,7 +53,7 @@
 												render="tableLinks" />
 										</h:commandButton>
 										&nbsp;
-										<h:commandButton value="Adicionar" styleClass="btnAction btn btn-primary" action="linksArquivosAdd" />
+										<h:button value="Adicionar" styleClass="btnAction btn btn-primary" outcome="linksArquivosAdd" />
 									</div>
 								</div>
 							</fieldset>
