--- a/src/main/webapp/private/administrativo/mensagem/list.xhtml
+++ b/src/main/webapp/private/administrativo/mensagem/list.xhtml
@@ -56,7 +56,7 @@
 										
 										</h:commandButton>
 										&nbsp;
-										<h:commandButton value="Adicionar" styleClass=" btnAction btn btn-primary" action="mensagemAdd" />
+										<h:button value="Adicionar" styleClass=" btnAction btn btn-primary" outcome="mensagemAdd" />
 										
 									</div>
 								</div>
