--- a/src/main/webapp/private/administrativo/objeto/form.xhtml
+++ b/src/main/webapp/private/administrativo/objeto/form.xhtml
@@ -37,7 +37,7 @@
 						<div class="spaceBtnAcao">
 							<h:commandButton styleClass=" btnAction btn btn-primary" value="Salvar" action="#{objetoFormMBean.salvar()}"    />
  							&nbsp;
-							<h:commandButton styleClass="btnAction btn btn-primary" style="margin-left: 0px" value="Cancelar" action="objetoList" immediate="true" />
+							<h:button styleClass="btnAction btn btn-primary" style="margin-left: 0px" value="Cancelar" outcome="objetoList" immediate="true" />
 						</div>
 					</div>	
 														
