--- a/src/main/webapp/private/administrativo/objeto/list.xhtml
+++ b/src/main/webapp/private/administrativo/objeto/list.xhtml
@@ -50,7 +50,7 @@
 											render="table" />
 									</h:commandButton>
 									&nbsp;
-									<h:commandButton value="Adicionar" styleClass=" btnAction btn btn-primary" action="objetoForm"/>
+									<h:button value="Adicionar" styleClass=" btnAction btn btn-primary" outcome="objetoForm"/>
 									</div>
 								</div>
 							</fieldset>
