--- a/src/main/webapp/private/administrativo/ppa/form.xhtml
+++ b/src/main/webapp/private/administrativo/ppa/form.xhtml
@@ -60,7 +60,7 @@
 							<div class="spaceBtnAcao">					
 								<h:commandButton styleClass=" btnAction btn btn-primary" value="Inserir" action="#{ppaFormMBean.salvar()}" />
 								&nbsp;
-								<h:commandButton styleClass="btnAction btn btn-primary" style="margin-left: 0px" value="Cancelar" action="ppaList" immediate="true" />	
+								<h:button styleClass="btnAction btn btn-primary" style="margin-left: 0px" value="Cancelar" outcome="ppaList" immediate="true" />	
 							</div>
 						</div>
 					</div>
