--- a/src/main/webapp/private/administrativo/ppa/list.xhtml
+++ b/src/main/webapp/private/administrativo/ppa/list.xhtml
@@ -65,7 +65,7 @@
 											 <f:ajax render="tablePpa" execute="@form"/>
 										</h:commandButton>
 										&nbsp;
-										<h:commandButton value="Adicionar" styleClass="btnAction btn btn-primary" action="ppaAdd" />
+										<h:button value="Adicionar" styleClass="btnAction btn btn-primary" outcome="ppaAdd" />
 										<hr class="linhaTransversal"></hr>
 									</div>
 								</div>
