--- a/src/main/webapp/private/administrativo/mensagem/form.xhtml
+++ b/src/main/webapp/private/administrativo/mensagem/form.xhtml
@@ -70,7 +70,7 @@
 							&nbsp;
 							<h:commandButton styleClass="btnAction btn btn-primary"  value="Editar" action="#{mensagemFormMBean.atualizar()}" rendered="#{mensagemFormMBean.mensagem.id !=null}"  />
 							&nbsp;
-							<h:commandButton styleClass="btnAction btn btn-primary" style="margin-left: 0px" value="Cancelar" action="mensagensList" immediate="true" />
+							<h:button styleClass="btnAction btn btn-primary" style="margin-left: 0px" value="Cancelar" outcome="mensagensList" immediate="true" />
 						</div>
 					</div>
 				</div>		
