--- a/src/main/webapp/private/administrativo/link/list.xhtml
+++ b/src/main/webapp/private/administrativo/link/list.xhtml
@@ -15,9 +15,7 @@
 		<ui:define name="conteudo">	
 			<h:form prependId="false" id="form">
 				<div class="container-fluid">
-					<div class="row-fluid">
-						<p:messages autoUpdate="true" showDetail="true" closable="true"/>
-					</div>
+					 
 					<div class="row-fluid">
 						<ui:include src="/template/tutorial_form.xhtml" />
 					</div>
@@ -59,7 +57,7 @@
 							</fieldset>
 						</div>
 					</div>
-					<legend class="outBusc">RESULTADOS</legend>
+					<div class="outBusc">RESULTADOS</div>
 				</div>				
 				<center>
 					<p:dataTable id="tableLinks" value="#{linkListMBean.listLinks}" var="link" paginator="true"
