controle de acesso quase finalizado

--- a/src/main/webapp/public/login.xhtml
+++ b/src/main/webapp/public/login.xhtml
@@ -94,11 +94,11 @@
 		</div>
 		<div class="row copyright">
 			<div class="col-md-6 col-sm-6 col-xs-6">
-				<img src="resources/images/logo-governo-2015.fw.png" class="img-responsive" />
+				<img src="#{facesContext.externalContext.request.contextPath}/resources/images/logo-governo-2015.fw.png" class="img-responsive" />
 
 			</div>
 			<div class="col-md-6 col-sm-6 col-xs-6">
-				<img src="resources/images/logo_seati_pb.fw.png" class="img-responsive" />
+				<img src="#{facesContext.externalContext.request.contextPath}/resources/images/logo_seati_pb.fw.png" class="img-responsive" />
 			</div>
 		</div>
 
