--- a/src/main/webapp/pages/page_left.xhtml
+++ b/src/main/webapp/pages/page_left.xhtml
@@ -18,7 +18,7 @@
 
 			<ul class="sidebar-menu" style="color: white;">
 				<li class="active"><a
-					href="#{facesContext.externalContext.request.contextPath}/views/private/index.jsf">
+					href="#{facesContext.externalContext.request.contextPath}/private/index.xhtml">
 						<i class="fa fa-dashboard"></i> <span>Plano PluriAnual</span>
 				</a></li>
 
