Apliquei o novo sistema de controle de acesso aos casos de uso atuais

--- a/src/main/webapp/pages/page_top.xhtml
+++ b/src/main/webapp/pages/page_top.xhtml
@@ -53,7 +53,7 @@
 										<div class="row">
 											<div class="col-md-6">
 												<small><a
-													href="#{facesContext.externalContext.request.contextPath}/views/private/administrativo/usuario/meusdados.jsf">Alterar
+													href="#{facesContext.externalContext.request.contextPath}/private/administrativo/usuario/meusdados.xhtml">Alterar
 														dados</a></small>
 											</div>
 											<div class="col-md-6">
