--- a/src/main/webapp/private/administrativo/usuario/meusdados.xhtml
+++ b/src/main/webapp/private/administrativo/usuario/meusdados.xhtml
@@ -29,10 +29,7 @@
 						
 						<div class="row-fluid">
 							<h:outputText value="EMAIL:  " styleClass="labelOutText" />
-							<h:inputText value="#{usuarioMBean.usuarioLogado.email}"
-								styleClass="form-control labelInputText" required="true"
-								validator="EmailValidator"
-								requiredMessage="Email: campo é obrigatório" />
+							<h:inputText value="#{usuarioMBean.usuarioLogado.email}" styleClass="form-control labelInputText" required="true" requiredMessage="Email: campo é obrigatório" />
 						</div>
 						<div class="row-fluid">
 							<h:outputText value="NOVA SENHA:  " styleClass="labelOutText" />
