--- a/src/main/webapp/private/index.xhtml
+++ b/src/main/webapp/private/index.xhtml
@@ -15,7 +15,7 @@
 	<ui:composition template="/template/template.xhtml">
 		<ui:define name="conteudo">
 			
-			
+			Futura Home
 		</ui:define>
 	</ui:composition>
 </body>
