--- a/src/main/webapp/private/administrativo/ppa/list.xhtml
+++ b/src/main/webapp/private/administrativo/ppa/list.xhtml
@@ -63,7 +63,7 @@
 											 <f:ajax render="tablePpa" execute="@form"/>
 										</h:commandButton>
 										&nbsp;
-										<h:button value="Adicionar" styleClass="btnAction btn btn-primary" outcome="ppaAdd" />
+										<h:button value="Adicionar" styleClass="btnAction btn btn-primary" outcome="ppaAdd" rendered="#{ppaListMBean.salvar}"/>
 										<hr class="linhaTransversal"></hr>
 									</div>
 								</div>
@@ -92,11 +92,8 @@
 							footerText="Quantidade Total: #{ppaListMBean.listPpas.size()}">
 							<center>
 
-								<p:commandButton title="Deletar" update="tablePpa"
-									action="#{ppaListMBean.delete(ppa)}" icon="ui-icon-trash">
-									<p:confirm header="Confirmação"
-										message="Você tem certeza que deseja deletar?"
-										icon="ui-icon-alert" />
+								<p:commandButton title="Deletar" update="tablePpa" rendered="#{ppaListMBean.deletar}" action="#{ppaListMBean.delete(ppa)}" icon="ui-icon-trash">
+									<p:confirm header="Confirmação" message="Você tem certeza que deseja deletar?" icon="ui-icon-alert" />
 								</p:commandButton>
 							</center>
 						</p:column>
