parte de salvar acao e removir os Serializable sem uso

--- a/src/main/webapp/private/qualitativo/acao/list.xhtml
+++ b/src/main/webapp/private/qualitativo/acao/list.xhtml
@@ -100,7 +100,7 @@
 						<p:column headerText="Operação" style="width: 14%;" footerText="Quantidade Total: ${fn:length(acaoListMBean.listAcoes)}">
 							<center>
 
-								<p:button title="Editar"  outcome="qualitativoAcaoView" icon="ui-icon-pencil" >
+								<p:button title="Visualizar"  outcome="qualitativoAcaoView" icon="ui-icon-search" >
 								 	  <f:param name="id" value="#{acao.id}" /> 
 								</p:button>
 
