--- a/src/main/webapp/private/qualitativo/acao/view.xhtml
+++ b/src/main/webapp/private/qualitativo/acao/view.xhtml
@@ -12,9 +12,15 @@
 <body> 
 	<ui:composition template="/template/template.xhtml">
 		<ui:define name="conteudo">
+		
+		 <f:metadata>
+	    			<f:viewParam name="id" value="#{acaoViewMBean.id}"/>
+	    			<f:viewAction action="#{acaoViewMBean.init}" />
+			 </f:metadata>
+			 	
 			<div class="container-fluid">
 				<div class="row-fluid">
-					<legend class="outBusc">VISUALIZAÇÃO</legend>
+					<div class="outBusc">VISUALIZAÇÃO</div>
 				</div>
 			</div>
 			<div class="spaceContainerForm">			
@@ -22,11 +28,11 @@
 					<div class="row">
 						<div class="col-lg-1">
 							<h:outputText value="CÓDIGO:  " styleClass="labelOutText" />
-							<h:outputText value="#{acaoMBean.entity.codigo}" styleClass="labelInputText"/>									
+							<h:outputText value="#{acaoViewMBean.acao.codigo}" styleClass="labelInputText"/>									
 						</div>
 						<div class="col-lg-6">
 							<h:outputText value="DENOMINAÇÃO:  " styleClass="labelOutText"/>
-							<h:outputText value="#{fn:toUpperCase(acaoMBean.entity.denominacao)}" styleClass="labelInputText"
+							<h:outputText value="#{fn:toUpperCase(acaoViewMBean.acao.denominacao)}" styleClass="labelInputText"
 								required="true" requiredMessage="Descrição: campo é obrigatório" />
 						</div>
 					</div>
@@ -36,21 +42,21 @@
 					<div class="row" style="margin-top: 1%;">
 						<div class="col-lg-3">
 							<h:outputText value="PROGRAMA:  " styleClass="labelOutText"/>
-							<h:outputText value="#{fn:toUpperCase(acaoMBean.entity.programa.denominacao)}" styleClass="labelInputText"/>									
+							<h:outputText value="#{fn:toUpperCase(acaoViewMBean.acao.programa.denominacao)}" styleClass="labelInputText"/>									
 						</div>	
 						<div class="col-lg-3">
 							<h:outputText value="FUNÇÃO:  " styleClass="labelOutText"/>
-							<h:outputText value="#{fn:toUpperCase(acaoMBean.entity.funcao.descricao)}" styleClass="labelInputText"/>
+							<h:outputText value="#{fn:toUpperCase(acaoViewMBean.acao.funcao.descricao)}" styleClass="labelInputText"/>
 						</div>
 					</div>
 					<div class="row" style="margin-top: 1%;">
 						<div class="col-lg-3">
 							<h:outputText value="SUBFUNÇÃO:  " styleClass="labelOutText"/>
-							<h:outputText value="#{fn:toUpperCase(acaoMBean.entity.subfuncao.descricao)}" styleClass="labelInputText"/>
+							<h:outputText value="#{fn:toUpperCase(acaoViewMBean.acao.subfuncao.descricao)}" styleClass="labelInputText"/>
 						</div>
 						<div class="col-lg-3">
 							<h:outputText value="UNIDADE ORÇAMENTÁRIA:  " styleClass="labelOutText"/>
-							<h:outputText value="#{fn:toUpperCase(acaoMBean.entity.unidadeOrcamentaria.descricao)}" styleClass="labelInputText"/>
+							<h:outputText value="#{fn:toUpperCase(acaoViewMBean.acao.unidadeOrcamentaria.descricao)}" styleClass="labelInputText"/>
 						</div>
 					</div>
 					<div class="row" style="margin-top: 1%;">
@@ -59,32 +65,32 @@
 					<div class="row" style="margin-top: 1%;">
 						<div class="col-lg-3">
 							<h:outputText value="MEDIDO PELA DESPESA: " styleClass="labelOutText"/>
-							<h:outputText value="SIM" rendered="#{acaoMBean.entity.medidoDespesa eq true}" styleClass="labelInputText"/>
-							<h:outputText value="NÃO" rendered="#{acaoMBean.entity.medidoDespesa eq false}" styleClass="labelInputText"/>
+							<h:outputText value="SIM" rendered="#{acaoViewMBean.acao.medidoDespesa eq true}" styleClass="labelInputText"/>
+							<h:outputText value="NÃO" rendered="#{acaoViewMBean.acao.medidoDespesa eq false}" styleClass="labelInputText"/>
 						</div>
 						<div class="col-lg-5">
 							<h:outputText value="PRODUTO: " styleClass="labelOutText"/>
-							<h:outputText value="#{fn:toUpperCase(acaoMBean.entity.produto)}" styleClass="labelInputText"/>
+							<h:outputText value="#{fn:toUpperCase(acaoViewMBean.acao.produto)}" styleClass="labelInputText"/>
 						</div>
 					</div>
 					<div class="row" style="margin-top: 1%;">
 						<div class="col-lg-3">
 							<h:outputText value="UNIDADE DE MEDIDA: " styleClass="labelOutText"/>
-							<h:outputText value="#{fn:toUpperCase(acaoMBean.entity.unidadeMedida.descricao)}" styleClass="labelInputText"/>
+							<h:outputText value="#{fn:toUpperCase(acaoViewMBean.acao.unidadeMedida.descricao)}" styleClass="labelInputText"/>
 						</div>
 						<div class="col-lg-9">
 							<h:outputText value="ESPECIFICAÇÃO DO PRODUTO: " styleClass="labelOutText"/>
-							<h:outputText value="#{fn:toUpperCase(acaoMBean.entity.especificaoProduto)}" styleClass="labelInputText"/>
+							<h:outputText value="#{fn:toUpperCase(acaoViewMBean.acao.especificaoProduto)}" styleClass="labelInputText"/>
 						</div>
 					</div>
 					<div class="row" style="margin-top: 1%;">
 						<div class="col-lg-3">
 							<h:outputText value="TIPO DE AÇÃO: "  styleClass="labelOutText"/>
-							<h:outputText value="#{fn:toUpperCase(acaoMBean.entity.tipoAcao.descricao)}" styleClass="labelInputText"/>
+							<h:outputText value="#{fn:toUpperCase(acaoViewMBean.acao.tipoAcao.descricao)}" styleClass="labelInputText"/>
 						</div>
 						<div class="col-lg-5">
 							<h:outputText value="TIPO HORIZONTE TEMPORAL: " styleClass="labelOutText"/>
-							<h:outputText value="#{fn:toUpperCase(acaoMBean.entity.tipoHorizonteTemporal.descricao)}" styleClass="labelInputText"/>
+							<h:outputText value="#{fn:toUpperCase(acaoViewMBean.acao.tipoHorizonteTemporal.descricao)}" styleClass="labelInputText"/>
 						</div>
 					</div>
 					<div class="row" style="margin-top: 1%;">
@@ -93,15 +99,15 @@
 					<div class="row" style="margin-top: 1%;">
 						<div class="col-lg-3">
 							<h:outputText value="TIPO FORMA DE IMPLEMENTAÇÃO: " styleClass="labelOutText"/>
-							<h:outputText value="#{fn:toUpperCase(acaoMBean.entity.tipoFormaImplementacao.descricao)}" styleClass="labelInputText"/>
+							<h:outputText value="#{fn:toUpperCase(acaoViewMBean.acao.tipoFormaImplementacao.descricao)}" styleClass="labelInputText"/>
 						</div>
 						<div class="col-lg-4">
 							<h:outputText value="TIPO DE ORÇAMENTO: "  styleClass="labelOutText"/>
-							<h:outputText value="#{fn:toUpperCase(acaoMBean.entity.tipoOrcamento.descricao)}" styleClass="labelInputText"/>
+							<h:outputText value="#{fn:toUpperCase(acaoViewMBean.acao.tipoOrcamento.descricao)}" styleClass="labelInputText"/>
 						</div>
 						<div class="col-lg-4">
 							<h:outputText value="TIPO DE CÁLCULO DA META: " styleClass="labelOutText"/>
-							<h:outputText value="#{fn:toUpperCase(acaoMBean.entity.tipoCalculoMeta.descricao)}" styleClass="labelInputText"/>
+							<h:outputText value="#{fn:toUpperCase(acaoViewMBean.acao.tipoCalculoMeta.descricao)}" styleClass="labelInputText"/>
 						</div>
 					</div>
 					<div class="row" style="margin-top: 1%;">
@@ -110,7 +116,7 @@
 						</div>
 						<div class="col-lg-4">
 							<h:outputText value="BASE LEGAL: " styleClass="labelOutText"/>
-							<h:outputText value="#{fn:toUpperCase(acaoMBean.entity.baseLegal)}" styleClass="labelInputText" />
+							<h:outputText value="#{fn:toUpperCase(acaoViewMBean.acao.baseLegal)}" styleClass="labelInputText" />
 						</div>
 					</div>
 					<div class="row" style="margin-top: 1%;">
@@ -119,7 +125,7 @@
 						</div>
 						<div class="col-lg-4">
 							<h:outputText value="DETALHAMENTO DA IMPLEMENTAÇÃO: " styleClass="labelOutText"/>
-							<h:outputText value="#{fn:toUpperCase(acaoMBean.entity.detalhamentoImplementacao)}" styleClass="labelInputText"/>
+							<h:outputText value="#{fn:toUpperCase(acaoViewMBean.acao.detalhamentoImplementacao)}" styleClass="labelInputText"/>
 						</div>
 					</div>
 					<div class="row" style="margin-top: 1%;">
@@ -128,13 +134,13 @@
 					<div class="row" style="margin-top: 1%;">
 						<div class="col-lg-2">
 							<h:outputText value="MÊS INÍCIO:  " styleClass="labelOutText"/>
-							<h:outputText value="#{acaoMBean.entity.mesInicio}">
+							<h:outputText value="#{acaoViewMBean.acao.mesInicio}">
 								<f:convertDateTime pattern="dd/MM/yyyy"/>
 							</h:outputText>
 						</div>
 						<div class="col-lg-2">
 							<h:outputText value="MÊS TÉRMINO:  " styleClass="labelOutText"/>
-							<h:outputText value="#{acaoMBean.entity.mesTermino}">
+							<h:outputText value="#{acaoViewMBean.acao.mesTermino}">
 								<f:convertDateTime pattern="dd/MM/yyyy"/>
 							</h:outputText>	
 						</div>
@@ -145,33 +151,33 @@
 					<div class="row" style="margin-top: 1%;">
 						<div class="col-lg-12">
 							<h:outputText value="FINALIDADE: " styleClass="labelOutText"/>
-							<h:outputText value="#{fn:toUpperCase(acaoMBean.entity.finalidade)}" styleClass="labelInputText"/>	
+							<h:outputText value="#{fn:toUpperCase(acaoViewMBean.acao.finalidade)}" styleClass="labelInputText"/>	
 						</div>						
 					</div>	
 					<div class="row" style="margin-top: 1%;">
 						<div class="col-lg-12">
 							<h:outputText value="DESCRIÇÃO: " styleClass="labelOutText"/>
-							<h:outputText value="#{fn:toUpperCase(acaoMBean.entity.descricao)}" styleClass="labelInputText"/>								
+							<h:outputText value="#{fn:toUpperCase(acaoViewMBean.acao.descricao)}" styleClass="labelInputText"/>								
 						</div>						
 					</div>	
 					<div class="row" style="margin-top: 1%;">
 						<div class="col-lg-12">
 							<h:outputText value="REPERCUSSÃO: " styleClass="labelOutText" />
-							<h:outputText value="#{fn:toUpperCase(acaoMBean.entity.repercussao)}" styleClass="labelInputText"/>		
+							<h:outputText value="#{fn:toUpperCase(acaoViewMBean.acao.repercussao)}" styleClass="labelInputText"/>		
 						</div>						
 					</div>
 					<div class="row" style="margin-top: 1%;">
 						<div class="col-lg-12">
 							<h:outputText value="OBSERVAÇÃO: " styleClass="labelOutText" />
-							<h:outputText value="#{fn:toUpperCase(acaoMBean.entity.observacao)}" styleClass="labelInputText"/>		
+							<h:outputText value="#{fn:toUpperCase(acaoViewMBean.acao.observacao)}" styleClass="labelInputText"/>		
 						</div>						
 					</div>
 					<div class="row-fluid" style="margin-top: 2%;">
 						<div class="spaceBtnAcao">		
 							<h:form>		
-								<h:commandButton styleClass="btn btn-primary" action="#{acaoMBean.gerarRelatorio()}" value="Imprimir" />
+								<h:commandButton styleClass="btn btn-primary" action="#{acaoViewMBean.imprimir()}" value="Imprimir" />
 								&nbsp;
-								<h:commandButton styleClass="btn btn-primary" action="#{acaoMBean.getUrlList()}" value="Voltar" />
+								<h:button styleClass="btn btn-primary" value="Voltar" style="margin-left: 0px"  outcome="acaoQualitativoList"  />
 							</h:form>	
 						</div>
 					</div>	
@@ -181,3 +187,4 @@
 	</ui:composition>
 </body> 
 </html>
+
