--- a/src/main/webapp/private/qualitativo/indicador/list.xhtml
+++ b/src/main/webapp/private/qualitativo/indicador/list.xhtml
@@ -17,7 +17,7 @@
 			<h:form>
 				<div class="container-fluid">	
 					<div class="row-fluid">
-						<ui:include src="/pages/page_advertencia_crud.xhtml"/>
+						<ui:include src="/template/tutorial_form.xhtml" />
 					</div>				
 					<div class="row-fluid">						
 						<div class="span12">
@@ -61,7 +61,7 @@
 							<h:outputText value="#{fn:toUpperCase(ind.indicador)}" />
 						</p:column>						
 						
-						<p:column headerText="OPERAÇÃO" style="width: 35px;" styleClass="outTextTable" footerText="Quantidade Total: ${fn:length(indicadorMBean.list)}">
+						<p:column headerText="OPERAÇÃO" style="width: 35px;" styleClass="outTextTable" footerText="Quantidade Total: ${fn:length(indicadorMBean.listIndicadores)}">
 							<center>
 							
 								<p:button title="Visualizar"  outcome="qualitativoIndicadorView" icon="ui-icon-search"  rendered="#{indicadorListMBean.view}">
