acabei plano interno

--- a/src/main/webapp/private/qualitativo/planointerno/edit.xhtml
+++ b/src/main/webapp/private/qualitativo/planointerno/edit.xhtml
@@ -65,8 +65,7 @@
 						
 								<h:commandButton styleClass=" btnAction btn btn-primary" value="Atualizar" action="#{planoInternoEditMBean.atualizar()}" />
 								&nbsp;	
-								<h:button styleClass="btnAction btn btn-primary"
-									style="margin-left: 0px" value="Cancelar" outcome="planoInternoQualitativoList" immediate="true" />
+								<h:button styleClass="btnAction btn btn-primary" style="margin-left: 0px" value="Cancelar" outcome="planoInternoQualitativoList" immediate="true" />
 							</div>	
 						</div>	
 												
