--- a/src/main/webapp/private/qualitativo/planointerno/list.xhtml
+++ b/src/main/webapp/private/qualitativo/planointerno/list.xhtml
@@ -18,7 +18,7 @@
 				<div class="container-fluid">
 					
 					<div class="row-fluid">
-						<ui:include src="/pages/page_advertencia_crud.xhtml"/>
+						<ui:include src="/template/tutorial_form.xhtml" />
 					</div>
 					<div class="row-fluid">
 						<div class="span12">
